# Covalent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.sandbox  README.md  alembic.ini  dev.sh  env.example  main.py  pyproject.toml
.github/workflows/: sandbox-image.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260428_000001_create_config_documents.py  20260428_000002_normalize_config_storage.py  20260428_000003_add_agent_mcp_tools.py  20260428_000004_drop_skill_sources.py  20260429_000005_recreate_skill_sources.py  20260430_000006_create_chat_sessions.py  20260430_000007_add_agent_reasoning_prompt_and_local_tools.py  20260501_000008_add_skill_enabled_state.py  20260517_000009_create_providers.py  20260518_000010_add_provider_default_model.py  (+11 more)
docs/: agent-stream-history-and-hitl.md  execution-backend-design.md  skill-file-viewer-redesign-design.md  skill-system-design.md
frontend/: BACKEND_GAPS.md  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
script/: sandbox-testing.py  smoke-docker-hardening.py  smoke-docker-shell.py  smoke-docker-skillhandle.py  spike-docker-exec-rpc.py
tests/: helpers.py  test_agent_crud_api.py  test_agent_react.py  test_docker_backend.py  test_filesystem_backend.py  test_mcp_argument_coercion.py  test_openai_compatible_provider.py  test_production_readiness.py  test_public_invoke_api.py  test_sandbox_admin_api.py  test_script_execution.py  test_shell_tools.py  test_skill_config_mcp_api.py  test_skill_lifecycle.py  test_workspace_access.py  test_workspace_tools.py
(+119 files in other folders)
