[project]
name = "agent-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "greenlet>=3.2.0",
    "httpx>=0.28.0",
    "mcp>=1.0.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_framework"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
